--- a/consultForm.html
+++ b/consultForm.html
@@ -35,7 +35,7 @@
 					<nav>
 						<ul>
 							<li><a href="./home.html">Home</a></li>
-							<li><a href="./searche.html">Buscas</a></li>
+							<!-- <li><a href="./consultForm.html">Buscas</a></li> -->
 							<li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
 							<li><input class="exitMenuHamburguer" type="button" value="Sair" onclick="exit()"></li>
 						</ul>
@@ -47,9 +47,9 @@
 
 		<form class="flex-row-form reset-form" name="putForm" method="put">
 			<div class="flex1-form">
-				<label for="cpf">CPF:</label>
+				<label for="cpf">Consultar prontuario por aqui:</label>
 				<input class="input-cpf" type="search" name="cpf" 
-					placeholder="Consultar por CPF AQUI... pressione tab" id="cpf">
+					placeholder="Digite o CPF a consultar" id="cpf">
 
 				<label for="name_full">Nome completo:</label>
 				<input class="input-name" type="text" name="name"  id="name">
@@ -100,8 +100,8 @@
 
 				<!-- button submit -->
 				<div class="flex3-submit">
-					<button class="input-submit1" type="button" >BUSCAR</button>
-					<button class="input-submit2" type="button" value="ATUALIZAR" id="signin-btn-submit">ATUALIZAR</button>
+					<button class="input-btn" type="button" >BUSCAR</button>
+					<button class="input-submit" type="button" value="ATUALIZAR" id="signin-btn-submit">ATUALIZAR</button>
 
 				</div>
 			</div>
@@ -116,7 +116,7 @@
 	<script src="./src/assets/js/responsiveHamburguer.js"></script>
 
 	<!-- <script src="./src/assets/js/allCount.js"></script> -->
-	<script src="./src/assets/js/getByCpf.js"></script>
+	<script src="./src/assets/js/consultForm.js"></script>
 	<script src="./src/assets/js/putForm.js"></script>
 	<script src="./src/assets/js/exitPage.js"></script>
 	<script src="./src/assets/js/exitMenuHamburguer.js"></script>
