--- a/generatePDF.html
+++ b/generatePDF.html
@@ -34,8 +34,8 @@
                     <nav>
                         <ul>
                             <li><a href="./home.html">Home</a></li>
-                            <li><a href="./searche.html">Buscas</a></li>
-                            <li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
+                            <li><a href="./consultForm.html">Buscas</a></li>
+                            <!-- <li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li> -->
                             <li><input class="exitMenuHamburguer" type="button" value="Sair" onclick="exit()"></li>
                         </ul>
                     </nav>
@@ -46,8 +46,8 @@
 
         <!-- container buttons -->
         <div class="center">
-            <input class="go-back" type="button" value="VOLTAR" onclick="window.location = '/searche.html' ">
-            <input class="cpfCurrent" type="search" placeholder="Digite o CPF">
+            <input class="go-back" type="button" value="VOLTAR" onclick="window.location = '/consultForm.html' ">
+            <input class="cpfCurrent" type="search" placeholder="Digite o CPF e aperte tab">
             <input class="imprimir" type="button" value="IMPRIMIR" onclick="imprimitPDF()">
         </div>
 
