--- a/consultForm.html
+++ b/consultForm.html
@@ -35,7 +35,7 @@
 					<nav>
 						<ul>
 							<li><a href="./home.html">Home</a></li>
-							<!-- <li><a href="./consultForm.html">Buscas</a></li> -->
+							<li><a href="./consultForm.html">Buscas</a></li>
 							<li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
 							<li><input class="exitMenuHamburguer" type="button" value="Sair" onclick="exit()"></li>
 						</ul>
