--- a/generatePDF.html
+++ b/generatePDF.html
@@ -35,7 +35,7 @@
                         <ul>
                             <li><a href="./home.html">Home</a></li>
                             <li><a href="./consultForm.html">Buscas</a></li>
-                            <!-- <li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li> -->
+                            <li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
                             <li><input class="exitMenuHamburguer" type="button" value="Sair" onclick="exit()"></li>
                         </ul>
                     </nav>
@@ -55,7 +55,7 @@
         <div id="generatePDF">
             <header>
                 <address>
-                    <h1 class="border">PRONTUÁRIO MÉDICO</h1>
+                    <h1>PRONTUÁRIO MÉDICO</h1>
                     <p> Associação de Articulação </p>
                     <p> Social dos Moradores </p>
                     <p> Comerciantes do Bairro de Peixinhos - AASCMBP</p>
@@ -66,7 +66,7 @@
                 </span>
             </header>
             <address>
-                <h3 class="border padding-top">DADOS DO PACIENTE:</h3>
+                <h3 class="padding-top">DADOS DO PACIENTE:</h3>
                 <p> nome: </p>
                 <p class="inline-block-nasc"> data de nascimento:</p>
                 <p class="inline-block-sexo"> sexo:</p>
@@ -81,7 +81,7 @@
                 <p class="inline-block-cidade"> cidade:</p>
                 <p class="inline-block-bairro">bairro: </p>
                 <p> Fone: </p>
-                <h3 class="border padding-top">INFORMAÇÕES DO PACIENTE:</h3>
+                <h3 class="padding-top">INFORMAÇÕES DO PACIENTE:</h3>
             </address>
             <p class="info"><span></span></p>
         </div>
