--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
 	<p class="count"></p>
 
 	<footer>
-		<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span>
+			<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022 <strong>Contato (81) 9.8760-4690</strong></span>
 	</footer>
 
 	<script src="./src/assets/js/homeRefreshToken.js"></script>
