--- a/home.html
+++ b/home.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="./src/assets/css/buttonInputSubmit.css">
 	<link rel="stylesheet" href="./src/assets/csserror/cpf-error.css">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<!-- <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'> -->
 
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -116,7 +118,7 @@
 	<p class="count"></p>
 
 	<footer>
-			<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022 <strong>Contato (81) 9.8760-4690</strong></span>
+			<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022  <i class="fa fa-whatsapp" style="font-size:48px;color:green"></i></span>
 	</footer>
 
 	<script src="./src/assets/js/homeRefreshToken.js"></script>
