icon Whatsapp footer

--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
 	<p class="count"></p>
 
 	<footer>
-			<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022  <i class="fa fa-whatsapp" style="font-size:48px;color:green"></i></span>
+			<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span> <i class="fa fa-whatsapp" style="font-size:24px;color:green"></i> <div class="whatsapp"><a href="https://wa.me/qr/QBOMRJZ4OPLYJ1">Whatsapp</a></div></i>
 	</footer>
 
 	<script src="./src/assets/js/homeRefreshToken.js"></script>
