--- a/consultForm.html
+++ b/consultForm.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="./src/assets/css/styles.css">
 	<link rel="stylesheet" href="./src/assets/css/buttonConsultForm.css">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
@@ -108,7 +110,7 @@
 		</form>
 	</div>
 	<footer>
-		<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span>
+		<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span> <i class="fa fa-whatsapp" style="font-size:24px;color:green"></i> <div class="whatsapp"><a href="https://wa.me/qr/QBOMRJZ4OPLYJ1">Whatsapp</a></div></i>
 	</footer>
 
 
