--- a/generatePDF.html
+++ b/generatePDF.html
@@ -10,6 +10,8 @@
     <title>prontuarios pdf</title>
     <link rel="stylesheet" href="./src/assets/css/generatePDF.css">
     <link rel="stylesheet" href="./src/assets/css/styles.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -88,7 +90,7 @@
     </div>
 
     <footer>
-        <span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span>
+        <span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span> <i class="fa fa-whatsapp" style="font-size:24px;color:green"></i> <div class="whatsapp"><a href="https://wa.me/qr/QBOMRJZ4OPLYJ1">Whatsapp</a></div></i>
     </footer>
 
 	<script src="./src/assets/js/responsiveHamburguer.js"></script>
